# peripage-A6-bluetooth

./: .env.secret  .envrc  .gitignore  CLAUDE.md  TODO.md  flake.nix  justfile  label.md  label.md.html  main.py  markdown-to-html.bash  markdown-to-html.bash.html  peri-a6.css  ppa6-print.py  print  print_label.bash  print_slices.sh  pyproject.toml  requirements.txt  test.md  test.md.html
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
app/: main.py
old/: flake.nix  ppa6-print.py  pyproject.toml
pp/: flake.nix  pyproject.toml
rs/: Cargo.toml
rs/src/: image_prep.rs  main.rs  printer.rs
src/pa6e/: __init__.py
